Adds about paragraph and blog url to config.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,10 +35,10 @@ layout: compress
                          <a class="btn zoombtn" href="{{ site.url }}/about">
                          About
                          </a>
-                         <a target="_blank" class="btn zoombtn" href="https://believeyoucanyouwill.wordpress.com/">
+                         <a class="btn zoombtn" href="{{ site.blog_url }}">
                          Travel Blog
                          </a>
-                         {% if site.posts_page %} <a class="btn zoombtn" href="{{ site.url }}/posts">
+                         {% if site.posts_page %} <a class="btn zoombtn" href="{{ site.url }}/posts" >
                          Posts
                          </a> {% endif %}
                          {% if site.projects_page %}<a class="btn zoombtn" href="{{ site.url }}/projects">
