Update Resume. (+1 squashed commits)
Squashed commits:

[be341da] Update Resume. (+1 squashed commits)

Squashed commits:

[a823328] Adds resume to home, nav, and about.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,6 +38,9 @@ layout: compress
                          <a class="btn zoombtn" href="{{ site.blog_url }}">
                          Travel Blog
                          </a>
+                         <a class="btn zoombtn" href="{{ site.url }}/assets/files/Brian Sinclair.pdf">
+                         Resume
+                         </a>
                          {% if site.posts_page %} <a class="btn zoombtn" href="{{ site.url }}/posts" >
                          Posts
                          </a> {% endif %}
